ceammc/ext/src/lib/lex/lemon_data_string_parser.cpp

#line 1 "lex/lemon_data_string_parser.rl"
# include "lemon_data_string_parser.h"
# include "lemon_data_string.h"
# include "parser_numeric.h"
# include "parser_color.h"
# include "fmt/core.h"
# include "ceammc_datatypes.h"

# include <cstdint>

# include "lemon_data_parser_impl.h"

# ifndef NDEBUG
# include "ceammc_log.h"
# endif

namespace {

// for autogenerated ragel internals
struct ColorRagelData {
    int r { 0 };
    int g { 0 };
    int b { 0 };
    int a { 0 };
    int x { 0 };
    void setHex(std::uint32_t c) {
        r = (c & 0xFF0000) >> 16;
        g = (c & 0x00FF00) >> 8;
        b = c & 0x0000FF;
    }
};

}


#line 246 "lex/lemon_data_string_parser.rl"


# include <cstring>

namespace ceammc {
namespace parser {


#line 47 "lex/lemon_data_string_parser.cpp"
static const int lemon_data_string_lexer_start = 36;
static const int lemon_data_string_lexer_first_final = 36;
static const int lemon_data_string_lexer_error = 0;

static const int lemon_data_string_lexer_en_scan_dqstring = 37;
static const int lemon_data_string_lexer_en_scan_matrix = 39;
static const int lemon_data_string_lexer_en_scan_dict = 50;
static const int lemon_data_string_lexer_en_scan_token = 107;
static const int lemon_data_string_lexer_en_main = 36;


#line 254 "lex/lemon_data_string_parser.rl"

LemonDataStringParser::LemonDataStringParser()
    : res_(nullptr)
{
    reset();
    lemon_data_string_parserInit(parser_data_);

# ifndef NDEBUG
    lemon_data_string_parserTrace(stderr, (char*)"\t> ");
# endif
}

LemonDataStringParser::~LemonDataStringParser()
{
    lemon_data_string_parserFinalize(parser_data_);
}

void LemonDataStringParser::pushToken(int token)
{
    lemon_data_string_parser_token(parser(), token, this);
}

void LemonDataStringParser::pushFloat(double val)
{
# ifndef NDEBUG
    std::cerr << __FUNCTION__ << ' ' << val << std::endl;
# endif

    lemon_data_string_parser_float(parser(), TK_FLOAT, val, this);
}

void LemonDataStringParser::pushSymbolToken(int token, const char* begin, const char* end)
{
    const auto N = std::min<int>(sizeof(parser_buf_) - 1, end - begin);

    for (int i = 0; i < N; i++)
        parser_buf_[i] = begin[i];

    parser_buf_[N] = 0;
    lemon_data_string_parser_str(parser(), token, parser_buf_, this);
}

bool LemonDataStringParser::parse(const char* data) noexcept
{
# ifndef NDEBUG
    LIB_LOG << fmt::format("[data] parse: {}", data);
# endif

    reset();

    // null string pointer
    if (data == nullptr) {
        error_ = "[data] parse: null string pointer given";
        return false;
    }

    // empty string
    if (data[0] == '\0')
        return true;

    // ragel vars
    int cs;
    int act;
    int top;
    int stack[16];
    // scanner match begin/end
    const char* ts = 0;
    const char* te = 0;
    // text start
    const char* p = data;
    // remove initial spaces
    while (*p == ' ') p++;
    // text end
    const char* pe = p + strlen(p);
    // remove last spaces
    while (pe != p && *(pe-1) == ' ') --pe;
    // EOF
    const char* eof = pe;

    DECLARE_RAGEL_COMMON_VARS;
    DECLARE_RAGEL_NUMERIC_VARS;

    ColorRagelData color;
    color.a = 0xFF;

    // for quoted string parser
    ceammc::BoostStaticString<512> ragel_string;
    // for matrices
    int ragel_mtx_cols = 0;
    int ragel_mtx_rows = 0;

    try {

    
#line 154 "lex/lemon_data_string_parser.cpp"
	{
	cs = lemon_data_string_lexer_start;
	top = 0;
	ts = 0;
	te = 0;
	act = 0;
	}

#line 348 "lex/lemon_data_string_parser.rl"
    
#line 165 "lex/lemon_data_string_parser.cpp"
	{
	if ( p == pe )
		goto _test_eof;
	goto _resume;

_again:
	switch ( cs ) {
		case 36: goto st36;
		case 37: goto st37;
		case 38: goto st38;
		case 1: goto st1;
		case 2: goto st2;
		case 3: goto st3;
		case 4: goto st4;
		case 5: goto st5;
		case 6: goto st6;
		case 7: goto st7;
		case 8: goto st8;
		case 9: goto st9;
		case 10: goto st10;
		case 11: goto st11;
		case 12: goto st12;
		case 13: goto st13;
		case 14: goto st14;
		case 15: goto st15;
		case 16: goto st16;
		case 17: goto st17;
		case 0: goto st0;
		case 39: goto st39;
		case 40: goto st40;
		case 41: goto st41;
		case 18: goto st18;
		case 42: goto st42;
		case 19: goto st19;
		case 43: goto st43;
		case 20: goto st20;
		case 44: goto st44;
		case 45: goto st45;
		case 46: goto st46;
		case 47: goto st47;
		case 21: goto st21;
		case 48: goto st48;
		case 22: goto st22;
		case 49: goto st49;
		case 50: goto st50;
		case 51: goto st51;
		case 52: goto st52;
		case 53: goto st53;
		case 54: goto st54;
		case 55: goto st55;
		case 56: goto st56;
		case 57: goto st57;
		case 58: goto st58;
		case 59: goto st59;
		case 60: goto st60;
		case 23: goto st23;
		case 24: goto st24;
		case 25: goto st25;
		case 61: goto st61;
		case 26: goto st26;
		case 27: goto st27;
		case 28: goto st28;
		case 62: goto st62;
		case 63: goto st63;
		case 64: goto st64;
		case 65: goto st65;
		case 66: goto st66;
		case 67: goto st67;
		case 29: goto st29;
		case 68: goto st68;
		case 30: goto st30;
		case 69: goto st69;
		case 70: goto st70;
		case 71: goto st71;
		case 31: goto st31;
		case 32: goto st32;
		case 33: goto st33;
		case 72: goto st72;
		case 73: goto st73;
		case 74: goto st74;
		case 75: goto st75;
		case 76: goto st76;
		case 77: goto st77;
		case 78: goto st78;
		case 79: goto st79;
		case 80: goto st80;
		case 81: goto st81;
		case 82: goto st82;
		case 83: goto st83;
		case 84: goto st84;
		case 85: goto st85;
		case 86: goto st86;
		case 87: goto st87;
		case 88: goto st88;
		case 89: goto st89;
		case 90: goto st90;
		case 91: goto st91;
		case 92: goto st92;
		case 93: goto st93;
		case 94: goto st94;
		case 95: goto st95;
		case 96: goto st96;
		case 97: goto st97;
		case 98: goto st98;
		case 99: goto st99;
		case 100: goto st100;
		case 101: goto st101;
		case 102: goto st102;
		case 103: goto st103;
		case 104: goto st104;
		case 105: goto st105;
		case 106: goto st106;
		case 107: goto st107;
		case 108: goto st108;
		case 109: goto st109;
		case 110: goto st110;
		case 111: goto st111;
		case 112: goto st112;
		case 113: goto st113;
		case 114: goto st114;
		case 115: goto st115;
		case 116: goto st116;
		case 117: goto st117;
		case 118: goto st118;
		case 119: goto st119;
		case 120: goto st120;
		case 121: goto st121;
		case 34: goto st34;
		case 122: goto st122;
		case 35: goto st35;
		case 123: goto st123;
		case 124: goto st124;
		case 125: goto st125;
		case 126: goto st126;
		case 127: goto st127;
		case 128: goto st128;
		case 129: goto st129;
		case 130: goto st130;
		case 131: goto st131;
		case 132: goto st132;
		case 133: goto st133;
		case 134: goto st134;
		case 135: goto st135;
		case 136: goto st136;
		case 137: goto st137;
		case 138: goto st138;
		case 139: goto st139;
		case 140: goto st140;
		case 141: goto st141;
		case 142: goto st142;
		case 143: goto st143;
		case 144: goto st144;
		case 145: goto st145;
		case 146: goto st146;
		case 147: goto st147;
		case 148: goto st148;
		case 149: goto st149;
		case 150: goto st150;
		case 151: goto st151;
		case 152: goto st152;
		case 153: goto st153;
		case 154: goto st154;
		case 155: goto st155;
		case 156: goto st156;
		case 157: goto st157;
		case 158: goto st158;
	default: break;
	}

	if ( ++p == pe )
		goto _test_eof;
_resume:
	switch ( cs )
	{
tr47:
#line 245 "lex/lemon_data_string_parser.rl"
	{ p--; {stack[top++] = 36;goto st107;} }
	goto st36;
st36:
#line 1 "NONE"
	{ts = 0;}
	if ( ++p == pe )
		goto _test_eof36;
case 36:
#line 350 "lex/lemon_data_string_parser.cpp"
	goto tr47;
tr0:
#line 169 "lex/lemon_data_string_parser.rl"
	{{p = ((te))-1;}{ ragel_string += (*p);  }}
	goto st37;
tr1:
#line 84 "lex/lemon_data_string_parser.rl"
	{te = p+1;{
        constexpr int BS = sizeof(parser_buf_) - 1;
        const auto N = std::min<int>(BS, (te - ts) - 2);
        for (int i = 0; i < N; i++)
            parser_buf_[i] = ts[i+1];

        parser_buf_[N] = 0;
        auto env = std::getenv(parser_buf_);

        if (env) {
            for (int i = 0; i < 256; i++) {
                bool break_loop = false;
                auto ch = env[i];
                switch (ch) {
                case '\'': ragel_string += '`'; ragel_string += '\''; break;
                case '"':  ragel_string += '`'; ragel_string += '"'; break;
                case '\0': break_loop = true; break;
                default:   ragel_string += ch; break;
                }

                if (break_loop) break;
            }
        } else
            ragel_string.append(ts, te - ts);
    }}
	goto st37;
tr17:
#line 170 "lex/lemon_data_string_parser.rl"
	{te = p+1;{ ragel_string += '"'; }}
	goto st37;
tr19:
#line 172 "lex/lemon_data_string_parser.rl"
	{te = p+1;{ ragel_string += '{'; }}
	goto st37;
tr20:
#line 173 "lex/lemon_data_string_parser.rl"
	{te = p+1;{ ragel_string += '}'; }}
	goto st37;
tr21:
#line 171 "lex/lemon_data_string_parser.rl"
	{te = p+1;{ ragel_string += '`'; }}
	goto st37;
tr48:
#line 169 "lex/lemon_data_string_parser.rl"
	{te = p+1;{ ragel_string += (*p);  }}
	goto st37;
tr49:
#line 166 "lex/lemon_data_string_parser.rl"
	{te = p+1;{ pushSymbolToken(TK_SYMBOL, &(*ragel_string.begin()), (&*ragel_string.end())); {cs = stack[--top];goto _again;} }}
	goto st37;
tr52:
#line 169 "lex/lemon_data_string_parser.rl"
	{te = p;p--;{ ragel_string += (*p);  }}
	goto st37;
st37:
#line 1 "NONE"
	{ts = 0;}
	if ( ++p == pe )
		goto _test_eof37;
case 37:
#line 1 "NONE"
	{ts = p;}
#line 420 "lex/lemon_data_string_parser.cpp"
	switch( (*p) ) {
		case 34: goto tr49;
		case 37: goto tr50;
		case 96: goto st17;
	}
	goto tr48;
tr50:
#line 1 "NONE"
	{te = p+1;}
	goto st38;
st38:
	if ( ++p == pe )
		goto _test_eof38;
case 38:
#line 435 "lex/lemon_data_string_parser.cpp"
	if ( (*p) == 95 )
		goto st1;
	if ( (*p) > 57 ) {
		if ( 65 <= (*p) && (*p) <= 90 )
			goto st1;
	} else if ( (*p) >= 48 )
		goto st1;
	goto tr52;
st1:
	if ( ++p == pe )
		goto _test_eof1;
case 1:
	switch( (*p) ) {
		case 37: goto tr1;
		case 95: goto st2;
	}
	if ( (*p) > 57 ) {
		if ( 65 <= (*p) && (*p) <= 90 )
			goto st2;
	} else if ( (*p) >= 48 )
		goto st2;
	goto tr0;
st2:
	if ( ++p == pe )
		goto _test_eof2;
case 2:
	switch( (*p) ) {
		case 37: goto tr1;
		case 95: goto st3;
	}
	if ( (*p) > 57 ) {
		if ( 65 <= (*p) && (*p) <= 90 )
			goto st3;
	} else if ( (*p) >= 48 )
		goto st3;
	goto tr0;
st3:
	if ( ++p == pe )
		goto _test_eof3;
case 3:
	switch( (*p) ) {
		case 37: goto tr1;
		case 95: goto st4;
	}
	if ( (*p) > 57 ) {
		if ( 65 <= (*p) && (*p) <= 90 )
			goto st4;
	} else if ( (*p) >= 48 )
		goto st4;
	goto tr0;
st4:
	if ( ++p == pe )
		goto _test_eof4;
case 4:
	switch( (*p) ) {
		case 37: goto tr1;
		case 95: goto st5;
	}
	if ( (*p) > 57 ) {
		if ( 65 <= (*p) && (*p) <= 90 )
			goto st5;
	} else if ( (*p) >= 48 )
		goto st5;
	goto tr0;
st5:
	if ( ++p == pe )
		goto _test_eof5;
case 5:
	switch( (*p) ) {
		case 37: goto tr1;
		case 95: goto st6;
	}
	if ( (*p) > 57 ) {
		if ( 65 <= (*p) && (*p) <= 90 )
			goto st6;
	} else if ( (*p) >= 48 )
		goto st6;
	goto tr0;
st6:
	if ( ++p == pe )
		goto _test_eof6;
case 6:
	switch( (*p) ) {
		case 37: goto tr1;
		case 95: goto st7;
	}
	if ( (*p) > 57 ) {
		if ( 65 <= (*p) && (*p) <= 90 )
			goto st7;
	} else if ( (*p) >= 48 )
		goto st7;
	goto tr0;
st7:
	if ( ++p == pe )
		goto _test_eof7;
case 7:
	switch( (*p) ) {
		case 37: goto tr1;
		case 95: goto st8;
	}
	if ( (*p) > 57 ) {
		if ( 65 <= (*p) && (*p) <= 90 )
			goto st8;
	} else if ( (*p) >= 48 )
		goto st8;
	goto tr0;
st8:
	if ( ++p == pe )
		goto _test_eof8;
case 8:
	switch( (*p) ) {
		case 37: goto tr1;
		case 95: goto st9;
	}
	if ( (*p) > 57 ) {
		if ( 65 <= (*p) && (*p) <= 90 )
			goto st9;
	} else if ( (*p) >= 48 )
		goto st9;
	goto tr0;
st9:
	if ( ++p == pe )
		goto _test_eof9;
case 9:
	switch( (*p) ) {
		case 37: goto tr1;
		case 95: goto st10;
	}
	if ( (*p) > 57 ) {
		if ( 65 <= (*p) && (*p) <= 90 )
			goto st10;
	} else if ( (*p) >= 48 )
		goto st10;
	goto tr0;
st10:
	if ( ++p == pe )
		goto _test_eof10;
case 10:
	switch( (*p) ) {
		case 37: goto tr1;
		case 95: goto st11;
	}
	if ( (*p) > 57 ) {
		if ( 65 <= (*p) && (*p) <= 90 )
			goto st11;
	} else if ( (*p) >= 48 )
		goto st11;
	goto tr0;
st11:
	if ( ++p == pe )
		goto _test_eof11;
case 11:
	switch( (*p) ) {
		case 37: goto tr1;
		case 95: goto st12;
	}
	if ( (*p) > 57 ) {
		if ( 65 <= (*p) && (*p) <= 90 )
			goto st12;
	} else if ( (*p) >= 48 )
		goto st12;
	goto tr0;
st12:
	if ( ++p == pe )
		goto _test_eof12;
case 12:
	switch( (*p) ) {
		case 37: goto tr1;
		case 95: goto st13;
	}
	if ( (*p) > 57 ) {
		if ( 65 <= (*p) && (*p) <= 90 )
			goto st13;
	} else if ( (*p) >= 48 )
		goto st13;
	goto tr0;
st13:
	if ( ++p == pe )
		goto _test_eof13;
case 13:
	switch( (*p) ) {
		case 37: goto tr1;
		case 95: goto st14;
	}
	if ( (*p) > 57 ) {
		if ( 65 <= (*p) && (*p) <= 90 )
			goto st14;
	} else if ( (*p) >= 48 )
		goto st14;
	goto tr0;
st14:
	if ( ++p == pe )
		goto _test_eof14;
case 14:
	switch( (*p) ) {
		case 37: goto tr1;
		case 95: goto st15;
	}
	if ( (*p) > 57 ) {
		if ( 65 <= (*p) && (*p) <= 90 )
			goto st15;
	} else if ( (*p) >= 48 )
		goto st15;
	goto tr0;
st15:
	if ( ++p == pe )
		goto _test_eof15;
case 15:
	switch( (*p) ) {
		case 37: goto tr1;
		case 95: goto st16;
	}
	if ( (*p) > 57 ) {
		if ( 65 <= (*p) && (*p) <= 90 )
			goto st16;
	} else if ( (*p) >= 48 )
		goto st16;
	goto tr0;
st16:
	if ( ++p == pe )
		goto _test_eof16;
case 16:
	if ( (*p) == 37 )
		goto tr1;
	goto tr0;
st17:
	if ( ++p == pe )
		goto _test_eof17;
case 17:
	switch( (*p) ) {
		case 34: goto tr17;
		case 40: goto tr19;
		case 41: goto tr20;
		case 96: goto tr21;
	}
	goto st0;
st0:
cs = 0;
	goto _out;
tr24:
#line 48 "lex/lemon_data_string_parser.rl"
	{{p = ((te))-1;}{
        onFloat(ragel_cat, ragel_type, ragel_num);
        ragel_num = {};
        ragel_cat = CAT_UNKNOWN;
        ragel_type = TYPE_UNKNOWN;
    }}
	goto st39;
tr56:
#line 47 "lex/lemon_data_string_parser.rl"
	{te = p+1;{ pushToken(TK_LIST_CLOSE); }}
	goto st39;
tr60:
#line 190 "lex/lemon_data_string_parser.rl"
	{te = p+1;{ pushToken(TK_MATRIX_CLOSE); {cs = stack[--top];goto _again;} }}
	goto st39;
tr61:
#line 189 "lex/lemon_data_string_parser.rl"
	{te = p;p--;{ pushToken(TK_SPACE); }}
	goto st39;
tr62:
#line 46 "lex/lemon_data_string_parser.rl"
	{te = p;p--;{ pushToken(TK_LIST_OPEN); }}
	goto st39;
tr63:
#line 30 "lex/ragel_numeric.rl"
	{
        ragel_num.vint *= ragel_num.sign;
        ragel_type = TYPE_INT;
        ragel_cat  = CAT_NUMBER;
    }
#line 48 "lex/lemon_data_string_parser.rl"
	{te = p;p--;{
        onFloat(ragel_cat, ragel_type, ragel_num);
        ragel_num = {};
        ragel_cat = CAT_UNKNOWN;
        ragel_type = TYPE_UNKNOWN;
    }}
	goto st39;
tr66:
#line 58 "lex/ragel_numeric.rl"
	{
        const auto frac = double(ragel_num.ratio.num) / ragel_num.ratio.den;
        ragel_num.vdouble = ragel_num.vint + ragel_num.sign * frac;
        ragel_type = TYPE_FLOAT;
        ragel_cat  = CAT_NUMBER;
    }
#line 48 "lex/lemon_data_string_parser.rl"
	{te = p;p--;{
        onFloat(ragel_cat, ragel_type, ragel_num);
        ragel_num = {};
        ragel_cat = CAT_UNKNOWN;
        ragel_type = TYPE_UNKNOWN;
    }}
	goto st39;
tr67:
#line 44 "lex/ragel_numeric.rl"
	{
        ragel_num.ratio.num *= ragel_num.sign;
        ragel_type = TYPE_RATIO;
        ragel_cat  = CAT_NUMBER;
    }
#line 48 "lex/lemon_data_string_parser.rl"
	{te = p;p--;{
        onFloat(ragel_cat, ragel_type, ragel_num);
        ragel_num = {};
        ragel_cat = CAT_UNKNOWN;
        ragel_type = TYPE_UNKNOWN;
    }}
	goto st39;
tr70:
#line 24 "lex/ragel_numeric.rl"
	{
        ragel_type = TYPE_BIN;
        ragel_cat  = CAT_NUMBER;
    }
#line 48 "lex/lemon_data_string_parser.rl"
	{te = p;p--;{
        onFloat(ragel_cat, ragel_type, ragel_num);
        ragel_num = {};
        ragel_cat = CAT_UNKNOWN;
        ragel_type = TYPE_UNKNOWN;
    }}
	goto st39;
tr71:
#line 37 "lex/ragel_numeric.rl"
	{
        ragel_type = TYPE_HEX;
        ragel_cat  = CAT_NUMBER;
    }
#line 48 "lex/lemon_data_string_parser.rl"
	{te = p;p--;{
        onFloat(ragel_cat, ragel_type, ragel_num);
        ragel_num = {};
        ragel_cat = CAT_UNKNOWN;
        ragel_type = TYPE_UNKNOWN;
    }}
	goto st39;
st39:
#line 1 "NONE"
	{ts = 0;}
	if ( ++p == pe )
		goto _test_eof39;
case 39:
#line 1 "NONE"
	{ts = p;}
#line 782 "lex/lemon_data_string_parser.cpp"
	switch( (*p) ) {
		case 32: goto st40;
		case 40: goto st41;
		case 41: goto tr56;
		case 43: goto tr57;
		case 45: goto tr57;
		case 48: goto tr58;
		case 93: goto tr60;
	}
	if ( (*p) > 13 ) {
		if ( 49 <= (*p) && (*p) <= 57 )
			goto tr59;
	} else if ( (*p) >= 9 )
		goto st40;
	goto st0;
st40:
	if ( ++p == pe )
		goto _test_eof40;
case 40:
	switch( (*p) ) {
		case 32: goto st40;
		case 41: goto tr56;
		case 93: goto tr60;
	}
	if ( 9 <= (*p) && (*p) <= 13 )
		goto st40;
	goto tr61;
st41:
	if ( ++p == pe )
		goto _test_eof41;
case 41:
	if ( (*p) == 32 )
		goto st41;
	if ( 9 <= (*p) && (*p) <= 13 )
		goto st41;
